<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/gambar_home"
        android:layout_width="313dp"
        android:layout_height="307dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gambar_home" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/masukan_nama_kamu_dulu_ya"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/gambar_home"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_masuk"

        android:layout_width="315dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/unguSoft"
        android:shadowColor="#514D4D"
        android:text="@string/mulai"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gambar_home" />

    <TextView
        android:id="@+id/lewati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:alpha="0.5"
        android:text="@string/lewati"
        app:layout_constraintStart_toEndOf="@+id/gambar_home"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="315dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bgedittext"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_masuk"
        app:layout_constraintStart_toEndOf="@+id/gambar_home"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.479" />
</androidx.constraintlayout.widget.ConstraintLayout>