<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kategori.KategoriActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bgbar"
        android:padding="10dp"
        android:text="@string/pilih"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/kategori_buah"
        app:layout_constraintStart_toStartOf="@+id/kategori_buah"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/kembali"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="166dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/kategori_buah"
        android:layout_width="589dp"
        android:layout_height="63dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bgedittext"
        android:drawableStart="@drawable/fruits"
        android:drawablePadding="5dp"
        android:padding="20dp"
        android:text="@string/buah_buahan"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/angka"
        android:layout_width="589dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bgedittext"
        android:drawableStart="@drawable/numbers"
        android:drawablePadding="5dp"
        android:padding="20dp"
        android:text="@string/angka"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/kategori_buah"
        app:layout_constraintStart_toStartOf="@+id/kategori_buah"
        app:layout_constraintTop_toBottomOf="@+id/kategori_buah" />

    <TextView
        android:id="@+id/huruf"
        android:layout_width="589dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bgedittext"
        android:drawableStart="@drawable/words"
        android:drawablePadding="5dp"
        android:padding="20dp"
        android:text="@string/huruf"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/angka"
        app:layout_constraintStart_toStartOf="@+id/angka"
        app:layout_constraintTop_toBottomOf="@+id/angka" />


</androidx.constraintlayout.widget.ConstraintLayout>