<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="43dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bgbar"
        android:padding="10dp"
        android:text="@string/detail"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="166dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/img_card_photo"
        android:layout_width="234dp"
        android:layout_height="202dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="104dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bgedittext"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/deskripsi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_card_photo" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/img_card_photo"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/img_card_photo"
        app:layout_constraintTop_toBottomOf="@id/nama"
        app:srcCompat="@drawable/play" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/lorem_ipsum"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>