<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadActivity">

    <ImageView
        android:id="@+id/gambar_upload"
        android:layout_width="427dp"
        android:layout_height="236dp"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/kembali"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/gambar_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gambar_upload"
        app:layout_constraintVertical_bias="0.122"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.bumptech.glide.manager.SupportRequestManagerFragment"
        android:layout_width="600dp"
        android:layout_height="150dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bghome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deteksi"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bgbar"
        android:padding="10dp"
        android:text="@string/deteksi"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bgbar"
        android:padding="10dp"
        android:text="@string/hasil_deteksi"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/kamera"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/bgbar"
        android:padding="10dp"
        android:text="@string/kamera"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/hasil"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/deteksi" />
</androidx.constraintlayout.widget.ConstraintLayout>